--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            text-align: center;
         }
 
         .container {
             max-width: 700px;
-            width: 100%;
+            width: 90%;
             background-color: #2c2c2e;
             border-radius: 15px;
             padding: 30px;
@@ -112,6 +113,29 @@
             border-radius: 15px;
             margin-top: 20px;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
+            width: 100%;
+            height: auto;
+            max-width: 100%;
+            aspect-ratio: 16 / 9; /* Mantém a proporção da tela */
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 1.5em;
+            }
+
+            label {
+                font-size: 1em;
+            }
+
+            button {
+                font-size: 1em;
+                padding: 12px;
+            }
+
+            .container {
+                padding: 20px;
+            }
         }
     </style>
 </head>
